Animated rigid body objects with deta transform can't be manipulated correctly #51703

Closed
opened 2017-06-02 16:34:22 +02:00 by Osku Raunio · 4 comments

System Information
Windows 10 Home, 64 bit, Geforce GTX 550 Ti

Blender Version
Broken: 2.78c

Short description of error

When manipulating an animated object that has rigid body physics and a delta transform, the delta transform is added again to the object

Exact steps for others to reproduce the error

  • Use the startup file
  • Change the delta location of the Cube
  • Enable Physics/Rigid Body
    • Set to animated
  • Move the current frame to 10
  • Press G to grab the cube, or transform in any other way
    • The Cube position is moved the amount of "delta transform"

**System Information** Windows 10 Home, 64 bit, Geforce GTX 550 Ti **Blender Version** Broken: 2.78c **Short description of error** When manipulating an animated object that has rigid body physics and a delta transform, the delta transform is added again to the object **Exact steps for others to reproduce the error** - Use the startup file - Change the delta location of the Cube - Enable Physics/Rigid Body - Set to animated - Move the current frame to 10 - Press G to grab the cube, or transform in any other way - >The Cube position is moved the amount of "delta transform"
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @OsRau

Added subscriber: @OsRau

This issue was referenced by d1dfd5fa26

This issue was referenced by d1dfd5fa26d89e40ecbf39b9ac921d341f8fdc41
Luca Rood self-assigned this 2017-07-04 11:03:17 +02:00
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51703
No description provided.