Fix T51703: Rigid body with delta transform jumps when transforming

When doing any transformation on a rigid body object that has delta
transforms, the object would be offset by the amount of the delta
transform.